--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -23,5 +23,21 @@ address : {{vm.address}}-->
        types="{{types}}"
        on-place-changed="vm.placeChanged()" />
 
+<div id="nav-icon3" ng-click="ToggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+</div>
+
 <ng-map center="[59.395896, 24.671332]" default-style="false" class="height100"></ng-map>
+
+<div class="menu" ng-show="menuVisible" ng-controller="MenuCtrl">
+    <div class="menu-header"></div>
+    <div class="menu-content">
+        <img class="icon" src="../images/account.svg"><h>aaaaa</h><br>
+        <img class="icon" src="../images/location.svg"><h>bbbb</h><br>
+        <img class="icon" src="../images/settings.svg"><h>ccccccc</h><br>
+    </div>
+</div>
 
