--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -36,7 +36,7 @@ address : {{vm.address}}-->
     <div class="menu-header"></div>
     <div class="menu-content">
         <img class="icon" src="../images/account.svg"><h>aaaaa</h><br>
-        <img class="icon" src="../images/location.svg"><h>bbbb</h><br>
+        <img class="icon" src="../images/location.svg"><h ng-click="switchToAddLocation()">Add new location</h><br>
         <img class="icon" src="../images/settings.svg"><h>ccccccc</h><br>
     </div>
 </div>
