--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -11,7 +11,10 @@
     <span></span>
 </div>
 
-<ng-map center="[59.395896, 24.671332]" default-style="false" class="height100"></ng-map>
+<ng-map zoom="11" center="[59.395896, 24.671332]" default-style="false" class="height100">
+    <marker position="current" shape="circle" coords="0,0,10" animation="Animation.BOUNCE" centered="true" color="green"></marker>
+    <marker position="[59.395896, 24.671332]"></marker>
+</ng-map>
 
 <div class="menu" ng-show="menuVisible" ng-controller="MenuCtrl">
     <div class="menu-header">
