--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -17,8 +17,7 @@
 </ng-map>
 
 <div class="menu" ng-show="menuVisible" ng-controller="MenuCtrl">
-    <div class="menu-header">
-    </div>
+    <div class="menu-header"></div>
 
     <div class="menu-content">
         <div class = "active-item seperateButtons"><img class="icon" src="images/account.svg"><h>Account</h></div>
