added static marker to addLocation page

--- a/src/main/webapp/partials/addLocation.html
+++ b/src/main/webapp/partials/addLocation.html
@@ -8,4 +8,5 @@
 <ng-map ng-mouseup="getCurrentCenterLocation()" center="[{{location.lat}},{{location.lng}}]" zoom="{{location.zoom}}" default-style="false" class="height100">
     <marker position="{{currentCenterLocation.lat}},{{currentCenterLocation.lng}}"></marker>
 </ng-map>
+<span id="add-location-map"></span>
 
