--- a/src/main/webapp/partials/addLocation.html
+++ b/src/main/webapp/partials/addLocation.html
@@ -1,12 +1,8 @@
-<input class="pac-input controls position" places-auto-complete size=80 ng-click="count()"
-       ng-model="vm.address"
-       component-restrictions="{country:'est'}"
-       types="{{types}}"
-       on-place-changed="vm.placeChanged()" />
+<input class="pac-input controls position" size=80 value="{{selectedAddress}}" readonly>
 
 
-<ng-map ng-mouseup="getCurrentCenterLocation()" center="[{{location.lat}},{{location.lng}}]" zoom="{{location.zoom}}" default-style="false" class="height100">
-    <marker position="{{currentCenterLocation.lat}},{{currentCenterLocation.lng}}"></marker>
+<ng-map ng-mouseup="getAddressFromCenterLocation()" center="[{{location.lat}},{{location.lng}}]" zoom="{{location.zoom}}" default-style="false" class="height100">
+    <marker color="green" position="{{currentCenterLocation.lat}},{{currentCenterLocation.lng}}"></marker>
 </ng-map>
 <span id="add-location-map"></span>
 
