--- a/src/main/webapp/partials/addLocation.html
+++ b/src/main/webapp/partials/addLocation.html
@@ -1,9 +1,10 @@
 <input class="pac-input controls position" size=80 value="{{selectedAddress}}" readonly>
 
-<div class="backBtn"><img src="images/backbtn.png"> </div>
+<div class="backBtn"><img src="images/backbtn.png" > </div>
+
 <ng-map ng-mouseup="getAddressFromCenterLocation()" my-touchend="getAddressFromCenterLocation()"center="[{{location.lat}},{{location.lng}}]" zoom="{{location.zoom}}" default-style="false" class="height100">
     <marker color="green" position="{{currentCenterLocation.lat}},{{currentCenterLocation.lng}}"></marker>
-
+    <div class="addLocationBtn"><img src="images/addToilet.png" class="img-circle" > </div>
 </ng-map>
 
 <span id="add-location-map"></span>
