--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -506,7 +506,7 @@ svg rect{
 	position: absolute;
 	top: 50%; left: 50%;
 	margin: -40px 0 0 -11px;
-	background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
+	background: url('http://192.185.56.29/~ivfhawai/wp-content/uploads/2013/08/map-pin1.png');
 	background-size: 22px 40px; /* Since I used the HiDPI marker version this compensates for the 2x size */
 	pointer-events: none; /* This disables clicks on the marker. Not fully supported by all major browsers, though */
 }
