--- a/src/main/webapp/partials/SignIn.html
+++ b/src/main/webapp/partials/SignIn.html
@@ -57,29 +57,30 @@
 
         <div id="login">
             <h1>Welcome Back!</h1>
-
-            <form action="/" method="post">
+            <div class="alert alert-danger" ng-show="error">
+                There was a problem logging in. Please try again.
+            </div>
+            <form role="form" ng-submit="login()">
 
                 <div class="field-wrap">
                     <label>
-                        Email Address<span class="req">*</span>
+                        Username<span class="req">*</span>
                     </label>
-                    <input type="email"required autocomplete="off"/>
+                    <input type="text" id="username" name="username" ng-model="credentials.username"/>
                 </div>
 
                 <div class="field-wrap">
                     <label>
                         Password<span class="req">*</span>
                     </label>
-                    <input type="password"required autocomplete="off"/>
+                    <input type="password"required autocomplete="off" id="password" name="password" ng-model="credentials.password"/>
                 </div>
 
                 <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-                <button class="button button-block"/>Log In</button>
+                <button class="button button-block" ng-click="login()"/>Log In</button>
 
             </form>
-
         </div>
 
     </div><!-- tab-content -->
