--- a/src/main/webapp/partials/SignIn.html
+++ b/src/main/webapp/partials/SignIn.html
@@ -37,9 +37,9 @@
 
                 <div class="field-wrap">
                     <label>
-                        Email Address<span class="req">*</span>
+                        Username<span class="req">*</span>
                     </label>
-                    <input type="email"required autocomplete="off"/>
+                    <input type="text"required autocomplete="off"/>
                 </div>
 
                 <div class="field-wrap">
@@ -49,7 +49,7 @@
                     <input type="password"required autocomplete="off"/>
                 </div>
 
-                <button type="submit" class="button button-block"/>Get Started</button>
+                <button type="submit" class="button button-block">Get Started</button>
 
             </form>
 
@@ -78,7 +78,7 @@
 
                 <p class="forgot"><a href="#">Forgot Password?</a></p>
 
-                <button class="button button-block" ng-click="login()"/>Log In</button>
+                <button class="button button-block" ng-click="login()">Log In</button>
 
             </form>
         </div>
