--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -1,1 +1,8 @@
-<a href="/#/signIn">LOGIN!!</a>
+<div class="loading-screen">
+    <div class="loading-content">
+        <p>404 Access forbidden!</p>
+        <form action="/#/signIn">
+            <button class="sign-in-button"></button>
+        </form>
+    </div>
+</div>
