--- a/src/main/webapp/partials/addLocation.html
+++ b/src/main/webapp/partials/addLocation.html
@@ -1,5 +1,16 @@
 <input class="pac-input controls position" size=80 ng-model="selectedAddress" readonly>
-
+<div class="alert add-location-alert-success" ng-hide="showSuccessAlert">
+    <button type="button" class="close" data-ng-click="switchBool('showSuccessAlert')" >×</button>
+    <strong>Done!</strong> {{successTextAlert}}
+</div>
+<div class="alert add-location-alert-success" ng-hide="showSuccessAlert">
+    <button type="button" class="close" data-ng-click="switchSuccess()" >×</button>
+    <strong>Done!</strong> {{successTextAlert}}
+</div>
+<div class="alert add-location-alert-danger" ng-hide="showFailAlert">
+    <button type="button" class="close" data-ng-click="switchFail()" >×</button>
+    <strong>Done!</strong> {{textAlert}}
+</div>
 <div class="backBtn" ng-click="switchToHome()"><img src="images/backbtn.png" > </div>
 
 <ng-map ng-mouseup="getAddressFromCenterLocation()" my-touchend="getAddressFromCenterLocation()"center="[{{location.lat}},{{location.lng}}]" zoom="{{location.zoom}}" default-style="false" class="height100">
