--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -1,3 +1,4 @@
+<p style="position:absolute;top:0px;left:50%;z-index:9999;background:white">{{vm.userAuthenticated}} and aaa</p>
 <input class="pac-input controls position" places-auto-complete size=80
        ng-model="vm.address"
        component-restrictions="{country:'est'}"
@@ -20,7 +21,7 @@
     <div class="circle" ng-class="{'expand':menuVisible}"></div>
     <div class="menu" ng-class="{'animate':menuVisible}">
         <ul>
-            <li ng-class="{'animate':menuVisible}"><a ng-click="logout()">Sign out</a></li>
+            <li ng-class="{'animate':menuVisible}"><a ng-click="logout()" ng-hide="!userAuthenticated">Sign out</a></li>
             <li ng-class="{'animate':menuVisible}"><a href="">Account</a></li>
             <li ng-class="{'animate':menuVisible}" ng-click="switchToAddLocation()"><a href="">Add new location</a></li>
             <li ng-class="{'animate':menuVisible}"><a href="">Settings</a></li>
