Rate html fix and made it appear when adding locatio

--- a/src/main/webapp/partials/rate.html
+++ b/src/main/webapp/partials/rate.html
@@ -27,5 +27,11 @@
 
 <br>
 <h2> Free </h2>
-
+<div>
+    <form class="input-center">
+        <input type="radio" name="free" value="yes" checked> Yes<br>
+        <input type="radio" name="free" value="no"> No<br>
+    </form>
+    <button class="button" ng-click="switchToAddLocationTwo()">Submit!</button>
+</div>
 </body>
