--- a/src/main/webapp/css/rate.css
+++ b/src/main/webapp/css/rate.css
@@ -1,3 +1,6 @@
+body {
+    text-align: center;
+}
 .rating {
 	overflow: hidden;
     display: inline-block;
@@ -9,13 +12,13 @@
 .rating-star {
 	display: block;
     float: right;
-    width: 80px;
+    width: 16px;
     height: 16px;
     background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
 }
 .rating-star:hover, .rating-star:hover ~ .rating-star, .rating-input:checked ~ .rating-star {
 	background-position: 0 0;
 }
-body {
-    text-align:center;
+.input-center {
+    display: block;
 }
