--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -81,7 +81,7 @@ h1 {
 	margin: 0 0 40px;
 }
 
-label {
+.labelSignIn {
 	position: absolute;
 	transform: translateY(6px);
 	left: 13px;
@@ -111,7 +111,7 @@ label.highlight {
 	color: #4a89dc;
 }
 
-input, textarea {
+.inputSignIn, textarea {
 	font-size: 22px;
 	display: block;
 	width: 100%;
