--- a/src/main/webapp/partials/SignIn.html
+++ b/src/main/webapp/partials/SignIn.html
@@ -18,32 +18,32 @@
             <h1>Sign Up for Free</h1>
                 <div class="top-row">
                     <div class="field-wrap">
-                        <label>
+                        <label class="labelSignIn">
                             First Name<span class="req">*</span>
                         </label>
-                        <input type="text" required autocomplete="off"  />
+                        <input class="inputSignIn" type="text" required autocomplete="off"  />
                     </div>
 
                     <div class="field-wrap">
-                        <label>
+                        <label class="labelSignIn">
                             Last Name<span class="req">*</span>
                         </label>
-                        <input type="text"required autocomplete="off"/>
+                        <input class="inputSignIn" type="text"required autocomplete="off"/>
                     </div>
                 </div>
 
                 <div class="field-wrap">
-                    <label>
+                    <label class="labelSignIn">
                         Username<span class="req">*</span>
                     </label>
-                    <input type="text"required autocomplete="off" ng-model="username"/>
+                    <input class="inputSignIn" type="text"required autocomplete="off" ng-model="username"/>
                 </div>
 
                 <div class="field-wrap">
-                    <label>
+                    <label class="labelSignIn">
                         Set A Password<span class="req">*</span>
                     </label>
-                    <input type="password"required autocomplete="off" ng-model="password"/>
+                    <input class="inputSignIn" type="password"required autocomplete="off" ng-model="password"/>
                 </div>
 
                 <button type="submit" class="button button-block" ng-click="submitAccount()">Get Started</button>
@@ -57,17 +57,17 @@
             <form role="form" ng-submit="login()" autocomplete="off">
 
                 <div class="field-wrap">
-                    <label>
+                    <label class="labelSignIn">
                         Username<span class="req">*</span>
                     </label>
-                    <input type="text" id="username" name="username" ng-model="credentials.username" autocomplete="off"/>
+                    <input class="inputSignIn" type="text" id="username" name="username" ng-model="credentials.username" autocomplete="off"/>
                 </div>
 
                 <div class="field-wrap">
-                    <label>
+                    <label class="labelSignIn">
                         Password<span class="req">*</span>
                     </label>
-                    <input type="password"required autocomplete="off" id="password" name="password" ng-model="credentials.password" autocomplete="off"/>
+                    <input class="inputSignIn" type="password"required autocomplete="off" id="password" name="password" ng-model="credentials.password" autocomplete="off"/>
                 </div>
 
                 <p class="forgot"><a href="#">Forgot Password?</a></p>
