--- a/src/main/webapp/partials/rate.html
+++ b/src/main/webapp/partials/rate.html
@@ -6,19 +6,19 @@
 <h2> Overall condition </h2>
 
 <span class="rating">
-    <input type="radio" class="rating-input"
+    <input ng-model="rating" ng-value="'5'" type="radio" class="rating-input"
            id="rating-input-1-5" name="rating-input-1">
     <label for="rating-input-1-5" class="rating-star"></label>
-    <input type="radio" class="rating-input"
+    <input ng-model="rating" ng-value="'4'" type="radio" class="rating-input"
            id="rating-input-1-4" name="rating-input-1">
     <label for="rating-input-1-4" class="rating-star"></label>
-    <input type="radio" class="rating-input"
+    <input ng-model="rating" ng-value="'3'" type="radio" class="rating-input"
            id="rating-input-1-3" name="rating-input-1">
     <label for="rating-input-1-3" class="rating-star"></label>
-    <input type="radio" class="rating-input"
+    <input ng-model="rating" ng-value="'2'" type="radio" class="rating-input"
            id="rating-input-1-2" name="rating-input-1">
     <label for="rating-input-1-2" class="rating-star"></label>
-    <input type="radio" class="rating-input"
+    <input checked ng-model="rating" ng-value="'1'" type="radio" class="rating-input"
            id="rating-input-1-1" name="rating-input-1">
     <label for="rating-input-1-1" class="rating-star"></label>
 </span>
@@ -29,8 +29,8 @@
 <h2> Free </h2>
 <div>
     <form class="input-center">
-        <input ng-model="result" ng-value="'Yes'" type="radio"  name="free" checked> Yes<br>
-        <input ng-model="result" type="radio" name="free" ng-value="'No'"> No<br>
+        <input ng-model="cost" ng-value="'Yes'" type="radio"  name="free" checked> Yes<br>
+        <input ng-model="cost" type="radio" name="free" ng-value="'No'"> No<br>
     </form>
     <button class="button" ng-click="submitRatingInfo()">Submit!</button>
 </div>
