--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -16,6 +16,9 @@
         <div ng-non-bindable>
             <h3>{{selectedLocation.address}}</h3>
             <h4>{{selectedLocation.rating}}</h4>
+            <span class="stars">
+                <span ng-style="{ 'width': getStars(selectedLocation.rating) }"></span>
+            </span>
             <h4>Priced: {{selectedLocation.free}}</h4>
         </div>
 
