--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -664,15 +664,18 @@ div.circle.expand{
 
 /*--------------------------------- CSS FOR DISPLAYING RATING ON HOME ----------------*/
 span.stars, span.stars span {
-	display: block;
+	display: table;
+	margin: 0 auto;
 	/*
    Download the star image here: http://stackoverflow.com/questions/1987524/turn-a-number-into-star-rating-display-using-jquery-and-css */
 	background: url('https://apppresser.com/wp-content/uploads/2015/11/stars.png') 0 -16px repeat-x;
 	width: 80px;
 	height: 16px;
+
 }
 
 span.stars span {
 	background-position: 0 0;
+	margin-left: 0px;
 }
 /*--------------------------------- CSS FOR DISPLAYING RATING ON HOME END -------------*/
