--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -4151,7 +4151,7 @@ input[type="submit"].btn.btn-mini {
 	width: 560px;
 	margin: -250px 0 0 -280px;
 	overflow: auto;
-	background-color: #ffffff;
+	/*background-color: #ffffff;*/
 	border: 1px solid #999;
 	border: 1px solid rgba(0, 0, 0, 0.3);
 	*border: 1px solid #999;
