--- a/src/main/webapp/css/rate.css
+++ b/src/main/webapp/css/rate.css
@@ -26,22 +26,8 @@ body {
   margin: 0;
   padding: 0;
   display: inline-block;
-
-  .star {
-    padding: 1px;
-    color: #ddd;
-    font-size: 20px;
-    text-shadow: .05em .05em #aaa;
-    list-style-type: none;
-    display: inline-block;
-    cursor: pointer;
-
-    &.filled {
-      color: #fd0;
-    }
   }
-
-  &.readonly .star.filled {
-    color: #666;
-  }
+.ratePopup {
+height: 33%;
 }
+
